--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,283 @@
-*{
-  margin:0;
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Muli:400,600,700&display=swap");
+
+* {
+  margin: 0;
   padding: 0;
+}
+
+:root {
+  --black-color: #000000;
+  --white-color: #ffffff;
+  --gray-color: #d8cccc;
+  --box: 0 2px 6px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 0 0 #dadce0;
+}
+
+@font-face {
+  font-family: "icomoon";
+  src: url("fonts/icomoon.eot?ipdcpr");
+  src: url("fonts/icomoon.eot?ipdcpr#iefix") format("embedded-opentype"),
+    url("./fonts/icomoon.ttf?ipdcpr") format("truetype"),
+    url("fonts/icomoon.woff?ipdcpr") format("woff"),
+    url("fonts/icomoon.svg?ipdcpr#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-facebook2:before {
+  content: "\ea91";
+}
+.icon-instagram:before {
+  content: "\ea92";
+}
+.icon-twitter:before {
+  content: "\ea96";
+}
+.icon-youtube:before {
+  content: "\ea9d";
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Muli", sans-serif;
+  margin: 0.5em auto;
+  letter-spacing: 1px;
+}
+
+h1 {
+  font-size: 35px;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 22px;
+}
+
+p,
+a {
+  margin: 0.5em auto;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+a {
+  cursor: pointer;
+}
+
+.header {
+  width: 100%;
+  height: auto;
+  padding: 0 1.5em;
+  box-shadow: var(--box);
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  z-index: 9;
+  background: #fff;
+}
+
+.header .header__container img {
+  width: 100px;
+  height: 75px;
+}
+
+.blog__container {
+  max-width: 80%;
+  margin: auto;
+  padding-top: 80px;
+}
+
+.blog__container .blog__container__content {
+  margin: 1.5em auto;
+}
+
+.blog__container .blog__container__content img {
+  width: 100%;
+  height: 540px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.blog__container__content .blog__container__image {
+  position: relative;
+}
+
+.blog__container__content .blog__container-details {
+  width: 100%;
+  height: inherit;
+  text-align: center;
+  position: absolute;
+  top: 35%;
+  color: var(--white-color);
+  display: none;
+}
+
+.blog__container__content .blog__container-details h3 {
+  font-weight: bold;
+}
+
+.blog__container__content .blog__container__slide {
+  width: 80%;
+  margin: 1.5em auto;
+  overflow: hidden;
+}
+
+.blog__container__slide-img figure {
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin: 0;
+  left: 0;
+  animation: slide 18s infinite ease alternate;
+}
+
+.blog__container__slide-img img {
+  width: 20%;
+  float: left;
+}
+
+.blog__container__suggestions {
+  width: 100%;
+  height: 200px;
+  padding: 0 1.5em;
+  border-top: 1px solid var(--gray-color);
+  border-bottom: 1px solid var(--gray-color);
+  box-sizing: border-box;
+}
+
+.blog__container__suggestions-items {
+  height: inherit;
+  display: grid;
+  grid-template-rows: 20% 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.blog__container__suggestions-items h3 {
+  margin: auto 0.7em;
+}
+
+.blog__container__suggestions-items article{
+  padding: 0 1em;
+  border-right: 1px solid var(--gray-color);
+}
+
+.blog__container__suggestions-items .item-1 {
+  grid-column: 1;
+}
+
+.blog__container__suggestions-items .item{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 25% 1fr;
+}
+
+.blog__container__suggestions-items .item h4{
+  margin: .5em 0;
+}
+
+.blog__container__suggestions-items .item img{
+  grid-column: 1;
+  width: 100%;
+}
+
+.blog__container__suggestions-items .item p{
+  margin: 0;
+  padding: .5em;
+}
+
+.blog__container__suggestions-items img{
+  width: 45%;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.footer__container{
+  width: 100%;
+  padding: 1em;
+  margin-top: 2em;
+  background-color: #f3f3f3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  box-sizing: border-box;
+}
+
+.footer__container .footer__container__menu ul{
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.footer__container .footer__container__menu li{
+  list-style: none;
+  margin: .5em;
+}
+
+.footer__container .footer__container__menu a{
+  text-decoration: none;
+  color: var(--black-color);
+  transition: all .3s;
+}
+
+.footer__container .footer__container__menu li a:hover{
+  color: #887b7b;
+}
+
+.footer__container .footer__container__social-icons{
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.footer__container .footer__container__social-icons p{
+  margin: 0;
+}
+
+.footer__container .footer__container__social-icons span{
+  margin: 0 .5em;
+}
+
+.footer__container .footer__container__social-icons span a {
+  text-decoration: none;
+  color: var(--black-color);
+  font-size: 25px;
+}
+
+/* Animations */
+
+@keyframes slide {
+0% { left: 0%; }
+20% { left: 0%; }
+25% { left: -100%; }
+45% { left: -100%; }
+50% { left: -200%; }
+70% { left: -200%; }
+75% { left: -300%; }
+95% { left: -300%; }
+100% { left: -400%; }
 }
