Some styles are updated in the related articles section,styles are created for screens up to 768px

--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,55 @@
-@media screen and(max-width:768px){
+@media screen and (max-width:768px){
+  body{
+    width: 100%;
+  }
 
+  h1{
+    font-size: 30px;
+  }
+
+  .blog__container .blog__container__content img{
+    height: 400px;
+  }
+
+  .blog__container__suggestions{
+    padding: 0 1em 23% 1em;
+  }
+
+  .blog__container__suggestions-items {
+    grid-template-rows: 10% 45% 45% 45%;
+  }
+
+  .blog__container__suggestions-items .item-1, .item-2 {
+    border-right: none;
+    border-bottom: 1px solid var(--gray-color);
+  }
+
+  .blog__container__suggestions-items article{
+    padding: 1em;
+  }
+
+  .blog__container__suggestions-items h3 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .blog__container__suggestions-items .item img {
+    height: 100%;
+  }
+
+  .blog__container__suggestions-items .item-1, .item-2, .item-3 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+
+  .footer__container{
+    grid-template-columns: 1fr;
+  }
 }
 
-@media screen and(max-width:480px){
-  
+
+@media screen and (max-width:480px){
+  body{
+    width: 100%;
+  }
 }
