--- a/css/styles.css
+++ b/css/styles.css
@@ -160,8 +160,8 @@ a {
 
 .blog__container__suggestions {
   width: 100%;
-  height: 200px;
-  padding: 0 1.5em;
+  height: auto;
+  padding: 1em;
   border-top: 1px solid var(--gray-color);
   border-bottom: 1px solid var(--gray-color);
   box-sizing: border-box;
@@ -170,16 +170,19 @@ a {
 .blog__container__suggestions-items {
   height: inherit;
   display: grid;
-  grid-template-rows: 20% 1fr;
+  grid-template-rows: 25% 140px;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
 .blog__container__suggestions-items h3 {
-  margin: auto 0.7em;
+  margin: .5em .7em;
 }
 
 .blog__container__suggestions-items article{
   padding: 0 1em;
+}
+
+.blog__container__suggestions-items .item-1, .item-2 {
   border-right: 1px solid var(--gray-color);
 }
 
@@ -194,12 +197,16 @@ a {
 }
 
 .blog__container__suggestions-items .item h4{
-  margin: .5em 0;
+  margin: 0;
+  padding: .5em;
+  grid-column: 2;
 }
 
 .blog__container__suggestions-items .item img{
-  grid-column: 1;
   width: 100%;
+  height: 80%;
+  grid-row-start: 1;
+  grid-row-end: 3;
 }
 
 .blog__container__suggestions-items .item p{
