--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --black-color: #000000;
   --white-color: #ffffff;
   --gray-color: #d8cccc;
+  --green-color:#11614a;
   --box: 0 2px 6px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 0 0 #dadce0;
 }
 
@@ -84,6 +85,7 @@ a {
 
 a {
   cursor: pointer;
+  text-decoration: none;
 }
 
 .header {
@@ -175,14 +177,15 @@ a {
 }
 
 .blog__container__suggestions-items h3 {
-  margin: .5em .7em;
+  margin: 0.5em 0.7em;
 }
 
-.blog__container__suggestions-items article{
+.blog__container__suggestions-items article {
   padding: 0 1em;
 }
 
-.blog__container__suggestions-items .item-1, .item-2 {
+.blog__container__suggestions-items .item-1,
+.item-2 {
   border-right: 1px solid var(--gray-color);
 }
 
@@ -190,38 +193,38 @@ a {
   grid-column: 1;
 }
 
-.blog__container__suggestions-items .item{
+.blog__container__suggestions-items .item {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 25% 1fr;
 }
 
-.blog__container__suggestions-items .item h4{
+.blog__container__suggestions-items .item h4 {
   margin: 0;
-  padding: .5em;
+  padding: 0.5em;
   grid-column: 2;
 }
 
-.blog__container__suggestions-items .item img{
+.blog__container__suggestions-items .item img {
   width: 100%;
   height: 80%;
   grid-row-start: 1;
   grid-row-end: 3;
 }
 
-.blog__container__suggestions-items .item p{
+.blog__container__suggestions-items .item p {
   margin: 0;
-  padding: .5em;
+  padding: 0.5em;
 }
 
-.blog__container__suggestions-items img{
+.blog__container__suggestions-items img {
   width: 45%;
   height: 100px;
   object-fit: cover;
   border-radius: 5px;
 }
 
-.footer__container{
+.footer__container {
   width: 100%;
   padding: 1em;
   margin-top: 2em;
@@ -231,7 +234,7 @@ a {
   box-sizing: border-box;
 }
 
-.footer__container .footer__container__menu ul{
+.footer__container .footer__container__menu ul {
   padding: 0;
   width: 100%;
   height: 100%;
@@ -239,34 +242,34 @@ a {
   align-items: center;
 }
 
-.footer__container .footer__container__menu li{
+.footer__container .footer__container__menu li {
   list-style: none;
-  margin: .5em;
+  margin: 0.5em;
 }
 
-.footer__container .footer__container__menu a{
+.footer__container .footer__container__menu a {
   text-decoration: none;
   color: var(--black-color);
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
-.footer__container .footer__container__menu li a:hover{
+.footer__container .footer__container__menu li a:hover {
   color: #887b7b;
 }
 
-.footer__container .footer__container__social-icons{
+.footer__container .footer__container__social-icons {
   height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
-.footer__container .footer__container__social-icons p{
+.footer__container .footer__container__social-icons p {
   margin: 0;
 }
 
-.footer__container .footer__container__social-icons span{
-  margin: 0 .5em;
+.footer__container .footer__container__social-icons span {
+  margin: 0 0.5em;
 }
 
 .footer__container .footer__container__social-icons span a {
@@ -278,13 +281,77 @@ a {
 /* Animations */
 
 @keyframes slide {
-0% { left: 0%; }
-20% { left: 0%; }
-25% { left: -100%; }
-45% { left: -100%; }
-50% { left: -200%; }
-70% { left: -200%; }
-75% { left: -300%; }
-95% { left: -300%; }
-100% { left: -400%; }
+  0% {
+    left: 0%;
+  }
+  20% {
+    left: 0%;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
+  }
+}
+
+.container {
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.banner {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  gap: 50px;
+  width: 100%;
+  margin-top: 110px;
+  margin-bottom: 30px;
+}
+.banner__content {
+}
+.banner__content__title {
+  color: var(--black-color);
+  text-decoration: none;
+  font-size: 35px;
+}
+
+.banner__content__resume{
+  line-height: normal;
+}
+.banner__content__link {
+
+  display: inline-block;
+  color: var(--white-color);
+  margin: 10px 0px;
+  padding: 5px 20px;
+  background: var(--green-color);
+  border-radius: 5px;
+  box-shadow: var(--box);
+}
+.banner__content__link:hover{
+  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 0 0 #dadce0;;
+}
+
+.banner img {
+  grid-column: 1;
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
