--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -315,15 +316,27 @@ a {
   max-width: 1024px;
   margin: 0 auto;
 }
+
 .banner {
   display: grid;
-  grid-template-columns: 60% 40%;
+  grid-template-columns: 1fr 1fr;
   gap: 50px;
   width: 100%;
   margin-top: 110px;
   margin-bottom: 30px;
+  padding: 0 25px;
+  align-items: center;
+
+}
+.banner img {
+  grid-column: 1;
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
 .banner__content {
+  grid-column: 2;
 }
 .banner__content__title {
   color: var(--black-color);
@@ -348,10 +361,4 @@ a {
   box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 0 0 #dadce0;;
 }
 
-.banner img {
-  grid-column: 1;
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-  object-position: center;
-}
+
