--- a/css/styles.css
+++ b/css/styles.css
@@ -384,6 +384,11 @@ a {
   border-radius: 5px;
   background: white;
   overflow: hidden;
+  transition: all .5s ease-in-out;
+}
+
+.blogs-views__item:hover{
+  box-shadow: 0px 0px 21px 0px rgba(0,0,0,0.75);
 }
 .blogs-views__content {
   padding: 0 15px;
